feat: Add some pages and components

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,8 @@
 GOOGLE_ID='244392592210-k14ud45m3lmsqsmvdktdree81br13bjd.apps.googleusercontent.com'
 GOOGLE_SECRET='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'
+
+YANDEX_CLIENT_ID='a8230b111b60445e944ac9c9eabf2ea3'
+YANDEX_CLIENT_SECRET='0b6300bb31064854867fad712db29330'
+
+NEXTAUTH_URL='http://localhost:3000'
+NEXTAUTH_SECRET='Edwfm2dcQ/J50FM518EMNvb/CU4CR6zYovaGzkUFH5s='
