--- a/package.json
+++ b/package.json
@@ -13,22 +13,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@heroicons/react": "2.0.18",
-    "@tremor/react": "3.6.1",
-    "next": "13.4.16",
+    "@fortawesome/fontawesome-svg-core": "6.4.2",
+    "@fortawesome/free-regular-svg-icons": "6.4.2",
+    "@fortawesome/free-solid-svg-icons": "6.4.2",
+    "@fortawesome/react-fontawesome": "0.2.0",
+    "next": "13.4.19",
     "next-auth": "4.23.1",
+    "nodemailer": "6.9.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "20.5.0",
-    "@types/react": "18.2.20",
+    "@faker-js/faker": "8.0.2",
+    "@headlessui/tailwindcss": "0.2.0",
+    "@types/node": "20.5.3",
+    "@types/react": "18.2.21",
     "autoprefixer": "10.4.15",
     "eslint": "8.47.0",
-    "eslint-config-next": "13.4.16",
+    "eslint-config-next": "13.4.19",
     "eslint-plugin-react": "7.33.2",
-    "eslint-plugin-react-hooks": "4.6.0",
     "postcss": "8.4.28",
+    "sharp": "0.32.5",
     "tailwind": "4.0.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
