feat: Connected on mongodb

--- a/.env.development
+++ b/.env.development
@@ -6,3 +6,6 @@ YANDEX_CLIENT_SECRET='0b6300bb31064854867fad712db29330'
 
 NEXTAUTH_URL='http://localhost:3000'
 NEXTAUTH_SECRET='Edwfm2dcQ/J50FM518EMNvb/CU4CR6zYovaGzkUFH5s='
+
+MONGODB_URL='mongodb://127.0.0.1:27017'
+MONGODB_DBNAME='polygon'
