--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-regular-svg-icons": "6.4.2",
     "@fortawesome/free-solid-svg-icons": "6.4.2",
     "@fortawesome/react-fontawesome": "0.2.0",
+    "mongodb": "5.8.1",
     "next": "13.4.19",
     "next-auth": "4.23.1",
     "nodemailer": "6.9.4",
